src/main/grammar/Cobol.bnf
{
  parserClass="com.github.radu88253.cobolparser.parser.CobolParserClass"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Cobol"
  psiImplClassSuffix="Impl"
  psiPackage="com.github.radu88253.cobolparser.psi"
  psiImplPackage="com.github.radu88253.cobolparser.psi.impl"

  elementTypeHolderClass="com.github.radu88253.cobolparser.psi.CobolTypes"
  elementTypeClass="com.github.radu88253.cobolparser.psi.CobolElementType"
  tokenTypeClass="com.github.radu88253.cobolparser.psi.CobolTokenType"
}

program ::= line+

line ::= line_number (token DOT?)+ (CRLF | EOF?)

line_number ::= NUMBER

token ::= STRING | KEYWORD | PIC_CLAUSE | OPERATOR | NUMBER | IDENTIFIER

PIC_CLAUSE ::= IDENTIFIER LPARAN NUMBER RPARAN | NUMBER LPARAN NUMBER RPARAN
